# groqdb-omni-index-research

./: README.md
benchmarks/: queries.groq
docs/: CHALLENGE.md  COORDINATION-PLAN.md  HOLODEX-DESIGN-v1.md  RESEARCH-PLAN.md  track1-data-structures.md  track2-fingerprinting.md  track2-v1.1-ngram.md  track2-v1.2-planning.md  track3-predicate-analysis.md  track4-range-queries.md  track5-integration.md  track6-benchmarks.md
prototypes/: Cargo.toml  holodex_prototype.rs  run_benchmark.sh
